--- a/src/main_brescia.ipynb
+++ b/src/main_brescia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "86ca2190",
    "metadata": {},
    "outputs": [
@@ -17,11 +17,13 @@
    ],
    "source": [
     "from torchvision import datasets, transforms\n",
+    "import torch.nn.functional as F\n",
+    "\n",
     "\n",
     "DATASET_DIR = \"../Rock-Paper-Scissors/train\"\n",
     "\n",
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((64, 64)),   \n",
+    "    transforms.Resize((100, 100)),   \n",
     "    transforms.ToTensor()\n",
     "])\n",
     "\n",
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "7f9377e2",
    "metadata": {},
    "outputs": [
@@ -49,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dimensione immagine: torch.Size([3, 64, 64])\n"
+      "Dimensione immagine: torch.Size([3, 100, 100])\n"
      ]
     }
    ],
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "529db738",
    "metadata": {},
    "outputs": [],
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "673ee449",
    "metadata": {},
    "outputs": [],
@@ -100,30 +102,35 @@
     "class RPSNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.net = nn.Sequential(\n",
-    "            nn.Conv2d(3, 32, 3),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "\n",
-    "            nn.Conv2d(32, 64, 3),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2),\n",
-    "\n",
-    "            nn.Flatten(),\n",
-    "            nn.Linear(64 * 14 * 14, 128),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(128, 3)\n",
-    "        )\n",
+    "        self.conv1 = nn.Conv2d(3, 32, 3)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 3)\n",
+    "        self.pool = nn.MaxPool2d(2)\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        \n",
+    "        # calcolo automatico dimensione\n",
+    "        with torch.no_grad():\n",
+    "            x = torch.zeros(1, 3, 100, 100)  # batch fittizio\n",
+    "            x = self.pool(F.relu(self.conv1(x)))\n",
+    "            x = self.pool(F.relu(self.conv2(x)))\n",
+    "            n_features = x.numel()\n",
+    "        \n",
+    "        self.fc1 = nn.Linear(n_features, 128)\n",
+    "        self.fc2 = nn.Linear(128, 3)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.net(x)\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = self.flatten(x)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
     "\n",
     "model = RPSNet().to(DEVICE)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "025289ea",
    "metadata": {},
    "outputs": [
@@ -131,16 +138,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10 - Loss: 50.053\n",
-      "Epoch 2/10 - Loss: 3.776\n",
-      "Epoch 3/10 - Loss: 0.825\n",
-      "Epoch 4/10 - Loss: 0.376\n",
-      "Epoch 5/10 - Loss: 0.129\n",
-      "Epoch 6/10 - Loss: 0.082\n",
-      "Epoch 7/10 - Loss: 0.051\n",
-      "Epoch 8/10 - Loss: 0.035\n",
-      "Epoch 9/10 - Loss: 0.025\n",
-      "Epoch 10/10 - Loss: 0.020\n"
+      "Epoch 1/10 - Loss: 48.485\n",
+      "Epoch 2/10 - Loss: 2.928\n",
+      "Epoch 3/10 - Loss: 0.324\n",
+      "Epoch 4/10 - Loss: 0.095\n",
+      "Epoch 5/10 - Loss: 0.045\n",
+      "Epoch 6/10 - Loss: 0.024\n",
+      "Epoch 7/10 - Loss: 0.015\n",
+      "Epoch 8/10 - Loss: 0.009\n",
+      "Epoch 9/10 - Loss: 0.006\n",
+      "Epoch 10/10 - Loss: 0.005\n"
      ]
     }
    ],
@@ -170,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "bce4cf0e",
    "metadata": {},
    "outputs": [
@@ -178,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Modello salvato!\n"
+      "Modello salvato!\n"
      ]
     }
    ],
