--- a/src/main_brescia.ipynb
+++ b/src/main_brescia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "86ca2190",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "7f9377e2",
    "metadata": {},
    "outputs": [
@@ -59,6 +59,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "37ad1cd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import random_split\n",
+    "\n",
+    "val_ratio = 0.2\n",
+    "val_size = int(val_ratio * len(dataset))\n",
+    "train_size = len(dataset) - val_size\n",
+    "\n",
+    "train_dataset, val_dataset = random_split(\n",
+    "    dataset, [train_size, val_size]\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ceec7e89",
    "metadata": {},
@@ -68,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "529db738",
    "metadata": {},
    "outputs": [],
@@ -77,16 +95,22 @@
     "\n",
     "BATCH_SIZE = 32\n",
     "\n",
-    "loader = DataLoader(\n",
-    "    dataset,\n",
+    "train_loader = DataLoader(\n",
+    "    train_dataset,\n",
     "    batch_size=BATCH_SIZE,\n",
     "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "val_loader = DataLoader(\n",
+    "    val_dataset,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    shuffle=False\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "673ee449",
    "metadata": {},
    "outputs": [],
@@ -123,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "025289ea",
    "metadata": {},
    "outputs": [
@@ -131,16 +155,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10 - Loss: 50.053\n",
-      "Epoch 2/10 - Loss: 3.776\n",
-      "Epoch 3/10 - Loss: 0.825\n",
-      "Epoch 4/10 - Loss: 0.376\n",
-      "Epoch 5/10 - Loss: 0.129\n",
-      "Epoch 6/10 - Loss: 0.082\n",
-      "Epoch 7/10 - Loss: 0.051\n",
-      "Epoch 8/10 - Loss: 0.035\n",
-      "Epoch 9/10 - Loss: 0.025\n",
-      "Epoch 10/10 - Loss: 0.020\n"
+      "Epoch 1/10 | Train Loss: 53.488 | Val Acc: 83.93%\n",
+      "Epoch 2/10 | Train Loss: 9.211 | Val Acc: 100.00%\n",
+      "Epoch 3/10 | Train Loss: 1.846 | Val Acc: 100.00%\n",
+      "Epoch 4/10 | Train Loss: 0.678 | Val Acc: 100.00%\n",
+      "Epoch 5/10 | Train Loss: 0.314 | Val Acc: 100.00%\n",
+      "Epoch 6/10 | Train Loss: 0.175 | Val Acc: 100.00%\n",
+      "Epoch 7/10 | Train Loss: 0.086 | Val Acc: 100.00%\n",
+      "Epoch 8/10 | Train Loss: 0.049 | Val Acc: 100.00%\n",
+      "Epoch 9/10 | Train Loss: 0.032 | Val Acc: 100.00%\n",
+      "Epoch 10/10 | Train Loss: 0.024 | Val Acc: 100.00%\n"
      ]
     }
    ],
@@ -151,10 +175,12 @@
     "EPOCHS = 10\n",
     "\n",
     "for epoch in range(EPOCHS):\n",
-    "    model.train()\n",
-    "    total_loss = 0\n",
     "\n",
-    "    for images, labels in loader:\n",
+    "    # TRAINING\n",
+    "    model.train()\n",
+    "    train_loss = 0.0\n",
+    "\n",
+    "    for images, labels in train_loader:\n",
     "        images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
     "\n",
     "        optimizer.zero_grad()\n",
@@ -163,14 +189,35 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        total_loss += loss.item()\n",
+    "        train_loss += loss.item()\n",
     "\n",
-    "    print(f\"Epoch {epoch+1}/{EPOCHS} - Loss: {total_loss:.3f}\")\n"
+    "    # VALIDATION\n",
+    "    model.eval()\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for images, labels in val_loader:\n",
+    "            images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
+    "            outputs = model(images)\n",
+    "            preds = torch.argmax(outputs, dim=1)\n",
+    "\n",
+    "            correct += (preds == labels).sum().item()\n",
+    "            total += labels.size(0)\n",
+    "\n",
+    "    val_acc = 100 * correct / total\n",
+    "\n",
+    "    print(\n",
+    "        f\"Epoch {epoch+1}/{EPOCHS} | \"\n",
+    "        f\"Train Loss: {train_loss:.3f} | \"\n",
+    "        f\"Val Acc: {val_acc:.2f}%\"\n",
+    "    )\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "bce4cf0e",
    "metadata": {},
    "outputs": [
@@ -178,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Modello salvato!\n"
+      "Modello salvato!\n"
      ]
     }
    ],
