--- a/src/main_brescia.ipynb
+++ b/src/main_brescia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "86ca2190",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "7f9377e2",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "37ad1cd9",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "529db738",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "673ee449",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "025289ea",
    "metadata": {},
    "outputs": [
@@ -155,16 +155,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10 | Train Loss: 53.488 | Val Acc: 83.93%\n",
-      "Epoch 2/10 | Train Loss: 9.211 | Val Acc: 100.00%\n",
-      "Epoch 3/10 | Train Loss: 1.846 | Val Acc: 100.00%\n",
-      "Epoch 4/10 | Train Loss: 0.678 | Val Acc: 100.00%\n",
-      "Epoch 5/10 | Train Loss: 0.314 | Val Acc: 100.00%\n",
-      "Epoch 6/10 | Train Loss: 0.175 | Val Acc: 100.00%\n",
-      "Epoch 7/10 | Train Loss: 0.086 | Val Acc: 100.00%\n",
-      "Epoch 8/10 | Train Loss: 0.049 | Val Acc: 100.00%\n",
-      "Epoch 9/10 | Train Loss: 0.032 | Val Acc: 100.00%\n",
-      "Epoch 10/10 | Train Loss: 0.024 | Val Acc: 100.00%\n"
+      "Epoch 1/10 | Train Loss: 42.019 | Val Acc: 96.43%\n",
+      "✅ Nuovo modello migliore salvato!\n",
+      "Epoch 2/10 | Train Loss: 4.744 | Val Acc: 98.41%\n",
+      "✅ Nuovo modello migliore salvato!\n",
+      "Epoch 3/10 | Train Loss: 1.026 | Val Acc: 100.00%\n",
+      "✅ Nuovo modello migliore salvato!\n",
+      "Epoch 4/10 | Train Loss: 0.400 | Val Acc: 100.00%\n",
+      "Nessun miglioramento (1/3)\n",
+      "Epoch 5/10 | Train Loss: 0.166 | Val Acc: 100.00%\n",
+      "Nessun miglioramento (2/3)\n",
+      "Epoch 6/10 | Train Loss: 0.099 | Val Acc: 100.00%\n",
+      "Nessun miglioramento (3/3)\n",
+      "Early stopping attivato\n"
      ]
     }
    ],
@@ -173,10 +176,13 @@
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "EPOCHS = 10\n",
+    "patience = 3\n",
     "\n",
+    "best_val_acc = 0.0\n",
+    "epochs_without_improvement = 0\n",
     "for epoch in range(EPOCHS):\n",
     "\n",
-    "    # TRAINING\n",
+    "    # ===== TRAINING =====\n",
     "    model.train()\n",
     "    train_loss = 0.0\n",
     "\n",
@@ -191,7 +197,7 @@
     "\n",
     "        train_loss += loss.item()\n",
     "\n",
-    "    # VALIDATION\n",
+    "    # ===== VALIDATION =====\n",
     "    model.eval()\n",
     "    correct = 0\n",
     "    total = 0\n",
@@ -212,26 +218,21 @@
     "        f\"Train Loss: {train_loss:.3f} | \"\n",
     "        f\"Val Acc: {val_acc:.2f}%\"\n",
     "    )\n",
+    "\n",
+    "    # ===== EARLY STOPPING + SALVATAGGIO =====\n",
+    "    if val_acc > best_val_acc:\n",
+    "        best_val_acc = val_acc\n",
+    "        epochs_without_improvement = 0\n",
+    "        torch.save(model.state_dict(), \"best_rps_model.pth\")\n",
+    "        print(\"Nuovo modello migliore salvato!\")\n",
+    "    else:\n",
+    "        epochs_without_improvement += 1\n",
+    "        print(f\"Nessun miglioramento ({epochs_without_improvement}/{patience})\")\n",
+    "\n",
+    "    if epochs_without_improvement >= patience:\n",
+    "        print(\"Early stopping attivato\")\n",
+    "        break\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "bce4cf0e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Modello salvato!\n"
-     ]
-    }
-   ],
-   "source": [
-    "torch.save(model.state_dict(), \"rps_model.pth\")\n",
-    "print(\"Modello salvato!\")\n"
    ]
   }
  ],
